objects/Racking_Item_Junction__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Orders Redesign - lookup field to tie a racking configuration to a specific item</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Racking Item Junctions</relationshipLabel>
        <relationshipName>Racking_Item_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of selected components in this kit.</description>
        <inlineHelpText>Number of selected components in this kit.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Racking_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Orders Redesign - lookup field used to tie an item to a specific racking configuration that can then be tied to one or more module configurations</description>
        <label>Racking Configuration</label>
        <referenceTo>Racking_Configuration__c</referenceTo>
        <relationshipLabel>Racking Item Junctions</relationshipLabel>
        <relationshipName>Racking_Item_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Racking Item Junction</label>
    <nameField>
        <label>Racking Item Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racking Item Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>